# apps/api/internal/route/user.go
@@ -44,4 +44,5 @@ func (route *User) Register(router gin.IRouter) {
 		group.GET(":id/followers", route.handler.Followers)
 		group.GET(":id/follow-events", route.handler.FollowEvents)
 	}
+	router.GET("/users/:id/followers/timeline", route.handler.Timeline)
 }
